--- a/yasen-kokmao/package.json
+++ b/yasen-kokmao/package.json
@@ -19,6 +19,7 @@
     "@types/node": "20.14.12",
     "@types/react": "18.3.3",
     "postcss": "^8",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
     "typescript": "5.5.4"
   }
